Fixed alignment issues

--- a/src/mocks/eventsforce/testStyles.css
+++ b/src/mocks/eventsforce/testStyles.css
@@ -192,3 +192,36 @@
 .modal-header-test {
   background-color: #22B3C4;
 }
+
+input[type=checkbox].ef-modal-body-session-attendee-checkbox {
+  appearance: none;
+  border: 2px solid #525659;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  box-shadow: none;
+  width: 15px;
+  height: 15px;
+}
+
+input[type=checkbox].ef-modal-body-session-attendee-checkbox:checked {
+  border-color: red;
+  background-color: red;
+}
+
+input[type=checkbox].ef-modal-body-session-attendee-checkbox:checked:before {
+  content: '\2713';
+  font-size: 15px;
+  position: absolute;
+  top: -3px;
+  left: 2px;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
+.ef-session-attendee-checkbox-with-label-container {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 35px;
+}
+
